tests/snapshots/integration__can_build_go_wasm.snap
---
source: tests/tests.rs
expression: all
---

---input.decor---
---go
package main

import "fmt"

func main() {
	fmt.Println("hello world")
}
---

#h1:Hello!

---out.wasm---
IGNORED

---wasm_exec.js---
IGNORED

---out.html---
<h1>Hello!</h1>

---out.js---
import "./out/wasm_exec.js";
const go = new Go();
let wasm = await WebAssembly.instantiateStreaming(fetch("out/out.wasm"), go.importObject);
go.run(wasm.instance);
wasm = wasm.instance.exports;

