tests/snapshots/integration__can_change_out_file_stem.snap
---
source: tests/tests.rs
expression: all
---

--- new.js---
function replace(node) {
  const text = document.createTextNode("");
  node.replaceWith(text);
  return text;
}
const elems = {};
__update(null, true);
function __update(dirty, initial) {
}

--- new.html---
<h1>This is a page</h1>

<div class="green"><p>Hello, my name is <em class="red">Diego!</em></p>
</div>

---input.decor---
#h1:This is a page

#div[class="green"]
  #p Hello, my name is #em[class="red"] Diego! /em /p
/div

