tests/snapshots/integration__can_change_out_file_stem_that_updates_in_index_html.snap
---
source: tests/tests.rs
expression: all
---

---index.html---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
  </head>
  <body>
    <script type="module" src="new.js"></script>
    <h1>This is a page</h1>

<div class="green"><p>Hello, my name is <em class="red">Diego!</em></p>
</div>

  </body>
</html>

---input.decor---
#h1:This is a page

#div[class="green"]
  #p Hello, my name is #em[class="red"] Diego! /em /p
/div

---new.js---
function replace(node) {
  const text = document.createTextNode("");
  node.replaceWith(text);
  return text;
}
const elems = {};
__update(null, true);
function __update(dirty, initial) {
}

