tests/snapshots/integration__can_disable_colorization.snap
---
source: tests/tests.rs
expression: filtered_stdout
---
DONE parsed
DONE HTML (out.html)
DONE JavaScript: prerender (out.js)
