tests/snapshots/integration__can_generate_index_html_that_integrates_with_prerender.snap
---
source: tests/tests.rs
expression: all
---

---index.html---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
  </head>
  <body>
    <script type="module" src="out.js"></script>
    <h1>This is a page</h1>

<div class="green"><p>Hello, my name is <em class="red">Diego!</em></p>
</div>

  </body>
</html>

---input.decor---
#h1:This is a page

#div[class="green"]
  #p Hello, my name is #em[class="red"] Diego! /em /p
/div

---out.js---

