tests/snapshots/integration__can_get_cache_info.snap
---
source: tests/tests.rs
expression: stdout
---
decorous cache info

location: [VALUE]
size: [VALUE]
number of entries: [VALUE]

